# waystone-comm

./: BETA_HANDOFF.md  CLAUDE.md  Cargo.toml  LICENSE  MASTERPLAN.md  PRODUCTION_SMOKE_CHECKLIST.md  README.md  RELEASE_NOTES.md  SMOKE.md
.github/workflows/: ci.yml
crates/waystone-comm-core/: Cargo.toml
crates/waystone-comm-core/src/: fsutil.rs  lib.rs
crates/waystone-comm-core/src/ai/: mod.rs
crates/waystone-comm-core/src/connection/: mod.rs  session_manager.rs
crates/waystone-comm-core/src/credentials/: mod.rs
crates/waystone-comm-core/src/directory/: mod.rs
crates/waystone-comm-core/src/history/: mod.rs
crates/waystone-comm-core/src/keymapping/: mod.rs
crates/waystone-comm-core/src/logging/: mod.rs
crates/waystone-comm-core/src/protocols/: mod.rs  raw.rs  serial.rs  ssh.rs  telnet.rs
crates/waystone-comm-core/src/scripting/: mod.rs
crates/waystone-comm-core/src/terminal/: cell.rs  emulator.rs  mod.rs  screen.rs  state.rs
crates/waystone-comm-core/src/transfer/: crc.rs  mod.rs  stream.rs  xmodem.rs  ymodem.rs  zmodem.rs
crates/waystone-comm-tui/: Cargo.toml
crates/waystone-comm-tui/src/: app.rs  main.rs
crates/waystone-comm-tui/src/ui/: credential_panel.rs  directory_panel.rs  fkey_bar.rs  keymapping_panel.rs  log_viewer_panel.rs  mod.rs  script_panel.rs  status_bar.rs  tab_bar.rs  terminal_pane.rs
docs/: index.html
scripts/: smoke-local.sh
