[workspace]
members = [
    "crates/waystone-comm-core",
    "crates/waystone-comm-tui",
]
resolver = "2"

[workspace.package]
version = "0.3.0-rc.1"
edition = "2021"
rust-version = "1.85"
authors = ["Waystone Comm Contributors"]
license = "MIT"
repository = "https://github.com/njb1966/waystone-comm"
description = "A keyboard-driven terminal for retro and modern protocols"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# SSH
russh = "0.49"
russh-keys = "0.49"

# Serial
serialport = "4"

# Scripting
rhai = { version = "1", features = ["sync"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono", "uuid"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
zeroize = { version = "1", features = ["derive"] }

# Networking / AI
reqwest = { version = "0.12", features = ["json", "stream"] }

# OS keychain
keyring = "3"

# Cryptography (credential encryption fallback)
aes-gcm = "0.10"
rand = "0.8"

# TLS
rustls = "0.23"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"

# Terminal parsing
vte = "0.13"

# Error handling
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
once_cell = "1"
dirs = "5"
shellexpand = "3"
ssh-key = { version = "0.6", features = ["ed25519"] }

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Testing
tempfile = "3"
