[package]
name = "waystone-comm-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
russh.workspace = true
russh-keys.workspace = true
serialport.workspace = true
rhai.workspace = true
sqlx.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
zeroize.workspace = true
reqwest.workspace = true
keyring.workspace = true
aes-gcm.workspace = true
rand.workspace = true
serde_json.workspace = true
rustls.workspace = true
tokio-rustls.workspace = true
rustls-native-certs.workspace = true
vte.workspace = true
thiserror.workspace = true
async-trait.workspace = true
once_cell.workspace = true
dirs.workspace = true
shellexpand.workspace = true
ssh-key.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
serde_json = "1"
