[package]
name = "waystone-comm-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "waystone-comm"
path = "src/main.rs"

[dependencies]
waystone-comm-core = { path = "../waystone-comm-core" }
dirs.workspace = true
tokio.workspace = true
ratatui.workspace = true
crossterm.workspace = true
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
async-trait.workspace = true
